--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 				Terima kasih sudah selalu berbuat baik, semoga semua keinginan segera terwujud dan jangan lupa untuk selalu tersenyum 😊
 			</p>
 			<audio src="src/HitungMundur.mp3" data-p="a"></audio>
-			<h3>Selamat Datang di Hitung Mundur</h3>
+			<h3>Selamat Anniversary Istriku</h3>
 		</div>
 		<h1>Menuju Hitung Mundur</h1>
 		<div class="content">
@@ -219,7 +219,7 @@
 		const ambilAudio = document.querySelector("audio")
 		// atur waktu
 
-		const waktuTujuan = new Date("Jan 12, 2023 06:48:00").getTime()
+		const waktuTujuan = new Date("Jan 12, 2023 06:55:00").getTime()
 		//alert(waktuTujuan)
 		let perhitungan = ()=> {
 			let waktuSekarang = new Date().getTime()
