--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			<audio src="src/HitungMundur.mp3" data-p="a"></audio>
 			<h3>Selamat Anniversary Istriku</h3>
 		</div>
-		<h1>Menuju Hitung Mundur</h1>
+		<h1>Menuju Anniversary 1 Year</h1>
 		<div class="content">
 			<span class="batang hari"> <span class="k">0</span> <span class="isi"></span> <span class="ket">Hari</span></span>
 			<span class="batang jam"> <span class="k">0</span> <span class="isi"></span> <span class="ket">Jam</span></span>
