--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			</div>-->
 			<img class="pentoy" src="src/HitungMundur.gif" alt="">
 			<p>
-				Terima kasih sudah selalu berbuat baik, semoga semua keinginan segera terwujud dan jangan lupa untuk selalu tersenyum 😊
+				Terima kasih sudah bertahan sampai detik ini, semoga semua keinginan kita segera terwujud dan jangan lupa untuk selalu tersenyum 😊
 			</p>
 			<audio src="src/HitungMundur.mp3" data-p="a"></audio>
 			<h3>Selamat Anniversary Istriku</h3>
@@ -207,7 +207,7 @@
 			<span class="batang detik"> <span class="k">0</span> <span class="isi"></span> <span class="ket">Detik</span></span>
 		</div>
 	</div>
-	<h2>@ Created by Abdul Mufid</h2>
+	<h2>Abdul Mufid ♡ Firda Febrianti</h2>
 
 	<script>
 		// ambil element html
