--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			</div>-->
 			<img class="pentoy" src="src/HitungMundur.gif" alt="">
 			<p>
-				Terima kasih sudah bertahan sampai detik ini, semoga semua keinginan kita segera terwujud dan jangan lupa untuk selalu tersenyum 😊
+				Waktu 1 tahun tidaklah sebentar, setahun ini menjadi bukti rasa setia terhadapmu. sehingga, hingga detik ini cinta ini masih tetap milikmu. Aku tak pernah tergoda dengan godaan cinta lain, karena bagiku kamulah segalanya dihati. Semoga kamu juga demikian, merasakan apa yang aku rasakan. Selamat anniversary 1 tahun Istriku, hanya kamu kado terindah di hidupku 🤍
 			</p>
 			<audio src="src/HitungMundur.mp3" data-p="a"></audio>
 			<h3>Selamat Anniversary Istriku</h3>
