--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			</div>-->
 			<img class="pentoy" src="src/HitungMundur.gif" alt="">
 			<p>
-				Waktu 1 tahun tidaklah sebentar, setahun ini menjadi bukti rasa setia terhadapmu. sehingga, hingga detik ini cinta ini masih tetap milikmu. Aku tak pernah tergoda dengan godaan cinta lain, karena bagiku kamulah segalanya dihati. Semoga kamu juga demikian, merasakan apa yang aku rasakan. Selamat anniversary 1 tahun Istriku, hanya kamu kado terindah di hidupku 🤍
+				Waktu 1 tahun tidaklah sebentar, setahun ini menjadi bukti rasa setia terhadapmu. sehingga, hingga detik ini cinta ini masih tetap milikmu. Aku tak pernah tergoda dengan godaan cinta lain, karena bagiku kamulah segalanya dihati. Semoga kamu juga demikian, merasakan apa yang aku rasakan. Hanya kamu kado terindah di hidupku 🤍
 			</p>
 			<audio src="src/HitungMundur.mp3" data-p="a"></audio>
 			<h3>Selamat Anniversary Istriku</h3>
